--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       :
       <span class="timer__milliseconds">000</span>
     </div>
-    <button class="stopwatch__start" onclick="startTimer()">Start</button>
-    <button class="stopwatch__stop" onclick="stopTimer()">Stop</button>
-    <button class="stopwatch__reset" onclick="resetTimer()">Reset</button>
+    <button onclick="startTimer()" class="stopwatch__start">Start</button>
+    <button onclick="stopTimer()" class="stopwatch__stop" disabled>Stop</button>
+    <button onclick="resetTimer()" class="stopwatch__reset" disabled>Reset</button>
   </div>
 
   <script src="app.js"></script>
